.productbtn misaligned fix

--- a/css/style.css
+++ b/css/style.css
@@ -2784,9 +2784,6 @@ a.plussign{
 	border-bottom: 2px solid #654016;
 	line-height: 0.1em;
 	font-weight: bold;
-	margin-left: 87px;
-
-
 }
 .productbtn:hover{
 	color: #c2641c;
